QtBeef/src/Qt/qpainterpath.bf

class QPainterPath
{
	private QPainterPath_Ptr* ptr;
	public this()
	{
		this.ptr = CQt.QPainterPath_new();
	}
	public this(QPointF_Ptr* startPoint)
	{
		this.ptr = CQt.QPainterPath_new2(startPoint);
	}
	public this(QPainterPath_Ptr* other)
	{
		this.ptr = CQt.QPainterPath_new3(other);
	}
	public ~this()
	{
		CQt.QPainterPath_Delete(this.ptr);
	}
	public void Swap(QPainterPath_Ptr* other)
	{
		CQt.QPainterPath_Swap((.)this.ptr, other);
	}
	public void Clear()
	{
		CQt.QPainterPath_Clear((.)this.ptr);
	}
	public void Reserve(c_int size)
	{
		CQt.QPainterPath_Reserve((.)this.ptr, size);
	}
	public c_int Capacity()
	{
		return CQt.QPainterPath_Capacity((.)this.ptr);
	}
	public void CloseSubpath()
	{
		CQt.QPainterPath_CloseSubpath((.)this.ptr);
	}
	public void MoveTo(QPointF_Ptr* p)
	{
		CQt.QPainterPath_MoveTo((.)this.ptr, p);
	}
	public void MoveTo2(double x, double y)
	{
		CQt.QPainterPath_MoveTo2((.)this.ptr, x, y);
	}
	public void LineTo(QPointF_Ptr* p)
	{
		CQt.QPainterPath_LineTo((.)this.ptr, p);
	}
	public void LineTo2(double x, double y)
	{
		CQt.QPainterPath_LineTo2((.)this.ptr, x, y);
	}
	public void ArcMoveTo(QRectF_Ptr* rect, double angle)
	{
		CQt.QPainterPath_ArcMoveTo((.)this.ptr, rect, angle);
	}
	public void ArcMoveTo2(double x, double y, double w, double h, double angle)
	{
		CQt.QPainterPath_ArcMoveTo2((.)this.ptr, x, y, w, h, angle);
	}
	public void ArcTo(QRectF_Ptr* rect, double startAngle, double arcLength)
	{
		CQt.QPainterPath_ArcTo((.)this.ptr, rect, startAngle, arcLength);
	}
	public void ArcTo2(double x, double y, double w, double h, double startAngle, double arcLength)
	{
		CQt.QPainterPath_ArcTo2((.)this.ptr, x, y, w, h, startAngle, arcLength);
	}
	public void CubicTo(QPointF_Ptr* ctrlPt1, QPointF_Ptr* ctrlPt2, QPointF_Ptr* endPt)
	{
		CQt.QPainterPath_CubicTo((.)this.ptr, ctrlPt1, ctrlPt2, endPt);
	}
	public void CubicTo2(double ctrlPt1x, double ctrlPt1y, double ctrlPt2x, double ctrlPt2y, double endPtx, double endPty)
	{
		CQt.QPainterPath_CubicTo2((.)this.ptr, ctrlPt1x, ctrlPt1y, ctrlPt2x, ctrlPt2y, endPtx, endPty);
	}
	public void QuadTo(QPointF_Ptr* ctrlPt, QPointF_Ptr* endPt)
	{
		CQt.QPainterPath_QuadTo((.)this.ptr, ctrlPt, endPt);
	}
	public void QuadTo2(double ctrlPtx, double ctrlPty, double endPtx, double endPty)
	{
		CQt.QPainterPath_QuadTo2((.)this.ptr, ctrlPtx, ctrlPty, endPtx, endPty);
	}
	public QPointF_Ptr CurrentPosition()
	{
		return CQt.QPainterPath_CurrentPosition((.)this.ptr);
	}
	public void AddRect(QRectF_Ptr* rect)
	{
		CQt.QPainterPath_AddRect((.)this.ptr, rect);
	}
	public void AddRect2(double x, double y, double w, double h)
	{
		CQt.QPainterPath_AddRect2((.)this.ptr, x, y, w, h);
	}
	public void AddEllipse(QRectF_Ptr* rect)
	{
		CQt.QPainterPath_AddEllipse((.)this.ptr, rect);
	}
	public void AddEllipse2(double x, double y, double w, double h)
	{
		CQt.QPainterPath_AddEllipse2((.)this.ptr, x, y, w, h);
	}
	public void AddEllipse3(QPointF_Ptr* center, double rx, double ry)
	{
		CQt.QPainterPath_AddEllipse3((.)this.ptr, center, rx, ry);
	}
	public void AddText(QPointF_Ptr* point, QFont_Ptr* f, libqt_string* text)
	{
		CQt.QPainterPath_AddText((.)this.ptr, point, f, text);
	}
	public void AddText2(double x, double y, QFont_Ptr* f, libqt_string* text)
	{
		CQt.QPainterPath_AddText2((.)this.ptr, x, y, f, text);
	}
	public void AddPath(QPainterPath_Ptr* path)
	{
		CQt.QPainterPath_AddPath((.)this.ptr, path);
	}
	public void AddRegion(QRegion_Ptr* region)
	{
		CQt.QPainterPath_AddRegion((.)this.ptr, region);
	}
	public void AddRoundedRect(QRectF_Ptr* rect, double xRadius, double yRadius)
	{
		CQt.QPainterPath_AddRoundedRect((.)this.ptr, rect, xRadius, yRadius);
	}
	public void AddRoundedRect2(double x, double y, double w, double h, double xRadius, double yRadius)
	{
		CQt.QPainterPath_AddRoundedRect2((.)this.ptr, x, y, w, h, xRadius, yRadius);
	}
	public void ConnectPath(QPainterPath_Ptr* path)
	{
		CQt.QPainterPath_ConnectPath((.)this.ptr, path);
	}
	public bool Contains(QPointF_Ptr* pt)
	{
		return CQt.QPainterPath_Contains((.)this.ptr, pt);
	}
	public bool Contains2(QRectF_Ptr* rect)
	{
		return CQt.QPainterPath_Contains2((.)this.ptr, rect);
	}
	public bool Intersects(QRectF_Ptr* rect)
	{
		return CQt.QPainterPath_Intersects((.)this.ptr, rect);
	}
	public void Translate(double dx, double dy)
	{
		CQt.QPainterPath_Translate((.)this.ptr, dx, dy);
	}
	public void Translate2(QPointF_Ptr* offset)
	{
		CQt.QPainterPath_Translate2((.)this.ptr, offset);
	}
	public QPainterPath_Ptr Translated(double dx, double dy)
	{
		return CQt.QPainterPath_Translated((.)this.ptr, dx, dy);
	}
	public QPainterPath_Ptr Translated2(QPointF_Ptr* offset)
	{
		return CQt.QPainterPath_Translated2((.)this.ptr, offset);
	}
	public QRectF_Ptr BoundingRect()
	{
		return CQt.QPainterPath_BoundingRect((.)this.ptr);
	}
	public QRectF_Ptr ControlPointRect()
	{
		return CQt.QPainterPath_ControlPointRect((.)this.ptr);
	}
	public Qt_FillRule FillRule()
	{
		return CQt.QPainterPath_FillRule((.)this.ptr);
	}
	public void SetFillRule(Qt_FillRule fillRule)
	{
		CQt.QPainterPath_SetFillRule((.)this.ptr, fillRule);
	}
	public bool IsEmpty()
	{
		return CQt.QPainterPath_IsEmpty((.)this.ptr);
	}
	public QPainterPath_Ptr ToReversed()
	{
		return CQt.QPainterPath_ToReversed((.)this.ptr);
	}
	public c_int ElementCount()
	{
		return CQt.QPainterPath_ElementCount((.)this.ptr);
	}
	public QPainterPath_Element ElementAt(c_int i)
	{
		return CQt.QPainterPath_ElementAt((.)this.ptr, i);
	}
	public void SetElementPositionAt(c_int i, double x, double y)
	{
		CQt.QPainterPath_SetElementPositionAt((.)this.ptr, i, x, y);
	}
	public double Length()
	{
		return CQt.QPainterPath_Length((.)this.ptr);
	}
	public double PercentAtLength(double t)
	{
		return CQt.QPainterPath_PercentAtLength((.)this.ptr, t);
	}
	public QPointF_Ptr PointAtPercent(double t)
	{
		return CQt.QPainterPath_PointAtPercent((.)this.ptr, t);
	}
	public double AngleAtPercent(double t)
	{
		return CQt.QPainterPath_AngleAtPercent((.)this.ptr, t);
	}
	public double SlopeAtPercent(double t)
	{
		return CQt.QPainterPath_SlopeAtPercent((.)this.ptr, t);
	}
	public bool Intersects2(QPainterPath_Ptr* p)
	{
		return CQt.QPainterPath_Intersects2((.)this.ptr, p);
	}
	public bool Contains3(QPainterPath_Ptr* p)
	{
		return CQt.QPainterPath_Contains3((.)this.ptr, p);
	}
	public QPainterPath_Ptr United(QPainterPath_Ptr* r)
	{
		return CQt.QPainterPath_United((.)this.ptr, r);
	}
	public QPainterPath_Ptr Intersected(QPainterPath_Ptr* r)
	{
		return CQt.QPainterPath_Intersected((.)this.ptr, r);
	}
	public QPainterPath_Ptr Subtracted(QPainterPath_Ptr* r)
	{
		return CQt.QPainterPath_Subtracted((.)this.ptr, r);
	}
	public QPainterPath_Ptr Simplified()
	{
		return CQt.QPainterPath_Simplified((.)this.ptr);
	}
	public void AddRoundedRect4(QRectF_Ptr* rect, double xRadius, double yRadius, Qt_SizeMode mode)
	{
		CQt.QPainterPath_AddRoundedRect4((.)this.ptr, rect, xRadius, yRadius, mode);
	}
	public void AddRoundedRect7(double x, double y, double w, double h, double xRadius, double yRadius, Qt_SizeMode mode)
	{
		CQt.QPainterPath_AddRoundedRect7((.)this.ptr, x, y, w, h, xRadius, yRadius, mode);
	}
}
interface IQPainterPath
{
	public void Swap();
	public void Clear();
	public void Reserve();
	public c_int Capacity();
	public void CloseSubpath();
	public void MoveTo();
	public void MoveTo2();
	public void LineTo();
	public void LineTo2();
	public void ArcMoveTo();
	public void ArcMoveTo2();
	public void ArcTo();
	public void ArcTo2();
	public void CubicTo();
	public void CubicTo2();
	public void QuadTo();
	public void QuadTo2();
	public QPointF CurrentPosition();
	public void AddRect();
	public void AddRect2();
	public void AddEllipse();
	public void AddEllipse2();
	public void AddEllipse3();
	public void AddText();
	public void AddText2();
	public void AddPath();
	public void AddRegion();
	public void AddRoundedRect();
	public void AddRoundedRect2();
	public void ConnectPath();
	public bool Contains();
	public bool Contains2();
	public bool Intersects();
	public void Translate();
	public void Translate2();
	public QPainterPath Translated();
	public QPainterPath Translated2();
	public QRectF BoundingRect();
	public QRectF ControlPointRect();
	public Qt_FillRule FillRule();
	public void SetFillRule();
	public bool IsEmpty();
	public QPainterPath ToReversed();
	public c_int ElementCount();
	public QPainterPath_Element ElementAt();
	public void SetElementPositionAt();
	public double Length();
	public double PercentAtLength();
	public QPointF PointAtPercent();
	public double AngleAtPercent();
	public double SlopeAtPercent();
	public bool Intersects2();
	public bool Contains3();
	public QPainterPath United();
	public QPainterPath Intersected();
	public QPainterPath Subtracted();
	public QPainterPath Simplified();
	public void AddRoundedRect4();
	public void AddRoundedRect7();
}
// --------------------------------------------------------------
// QPainterPathStroker
// --------------------------------------------------------------
[CRepr]
struct QPainterPathStroker_Ptr: void
{
}
extension CQt
{
	[LinkName("QPainterPathStroker_new")]
	public static extern QPainterPathStroker_Ptr* QPainterPathStroker_new();
	[LinkName("QPainterPathStroker_new2")]
	public static extern QPainterPathStroker_Ptr* QPainterPathStroker_new2(QPen_Ptr* pen);
	[LinkName("QPainterPathStroker_Delete")]
	public static extern void QPainterPathStroker_Delete(QPainterPathStroker_Ptr* self);
	[LinkName("QPainterPathStroker_SetWidth")]
	public static extern void QPainterPathStroker_SetWidth(QPainterPathStroker_Ptr* self, double width);
	[LinkName("QPainterPathStroker_Width")]
	public static extern double QPainterPathStroker_Width(QPainterPathStroker_Ptr* self);
	[LinkName("QPainterPathStroker_SetCapStyle")]
	public static extern void QPainterPathStroker_SetCapStyle(QPainterPathStroker_Ptr* self, Qt_PenCapStyle style);
	[LinkName("QPainterPathStroker_CapStyle")]
	public static extern Qt_PenCapStyle QPainterPathStroker_CapStyle(QPainterPathStroker_Ptr* self);
	[LinkName("QPainterPathStroker_SetJoinStyle")]
	public static extern void QPainterPathStroker_SetJoinStyle(QPainterPathStroker_Ptr* self, Qt_PenJoinStyle style);
	[LinkName("QPainterPathStroker_JoinStyle")]
	public static extern Qt_PenJoinStyle QPainterPathStroker_JoinStyle(QPainterPathStroker_Ptr* self);
	[LinkName("QPainterPathStroker_SetMiterLimit")]
	public static extern void QPainterPathStroker_SetMiterLimit(QPainterPathStroker_Ptr* self, double length);
	[LinkName("QPainterPathStroker_MiterLimit")]
	public static extern double QPainterPathStroker_MiterLimit(QPainterPathStroker_Ptr* self);
	[LinkName("QPainterPathStroker_SetCurveThreshold")]
	public static extern void QPainterPathStroker_SetCurveThreshold(QPainterPathStroker_Ptr* self, double threshold);
	[LinkName("QPainterPathStroker_CurveThreshold")]
	public static extern double QPainterPathStroker_CurveThreshold(QPainterPathStroker_Ptr* self);
	[LinkName("QPainterPathStroker_SetDashPattern")]
	public static extern void QPainterPathStroker_SetDashPattern(QPainterPathStroker_Ptr* self, Qt_PenStyle dashPattern);
	[LinkName("QPainterPathStroker_SetDashPattern2")]
	public static extern void QPainterPathStroker_SetDashPattern2(QPainterPathStroker_Ptr* self, void** dashPattern);
	[LinkName("QPainterPathStroker_DashPattern")]
	public static extern void* QPainterPathStroker_DashPattern(QPainterPathStroker_Ptr* self);
	[LinkName("QPainterPathStroker_SetDashOffset")]
	public static extern void QPainterPathStroker_SetDashOffset(QPainterPathStroker_Ptr* self, double offset);
	[LinkName("QPainterPathStroker_DashOffset")]
	public static extern double QPainterPathStroker_DashOffset(QPainterPathStroker_Ptr* self);
	[LinkName("QPainterPathStroker_CreateStroke")]
	public static extern QPainterPath_Ptr QPainterPathStroker_CreateStroke(QPainterPathStroker_Ptr* self, QPainterPath_Ptr* path);
}
